# ddia-playground

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
playgrounds/: README.md  requirements.txt
playgrounds/ch03-data-models/: 01-n-plus-one.ipynb  01-n-plus-one.py  README.md
playgrounds/ch04-storage-and-retrieval/: 01-lsm-vs-btree.ipynb  01-lsm-vs-btree.py  README.md
scripts/: convert_epub.py
wiki/: index.md  log.md
wiki/concepts/: abstraction.md  analytical-system.md  apache-arrow.md  apache-iceberg.md  array-database.md  avro.md  b-tree.md  backpressure.md  batch-processing.md  bitmap-index.md  blameless-postmortem.md  bloom-filter.md  cache.md  cloud-native.md  clustered-index.md  column-compression.md  column-oriented-storage.md  compaction.md  covering-index.md  cqrs.md  cypher.md  data-catalog.md  data-cube.md  data-intensive-application.md  data-lake.md  data-locality.md  data-minimization.md  data-model.md  data-silo.md  data-warehouse-schema.md  data-warehouse.md  database.md  dataframe.md  datalog.md  declarative-query-language.md  delta-lake.md  denormalization.md  derived-data-system.md  distributed-system.md  document-model.md  (+89 more)
wiki/entities/: accumulo.md  activerecord.md  allegrograph.md  amazon-neptune.md  amazon-redshift.md  amazon-s3.md  amazon.md  apache-datafusion.md  apache-druid.md  apache-flink.md  apache-hive.md  apache-jena.md  apache-kafka.md  apache-pinot.md  arcticdb.md  axon-framework.md  bert.md  bigquery.md  bigtable.md  blazegraph.md  cassandra.md  clickhouse.md  couchbase.md  cozodb.md  dask.md  datomic.md  duckdb.md  (+69 more)
(+8 files in other folders)
